--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@
 
 # production
 
-
 # misc
 .DS_Store
 .env.local
@@ -21,3 +20,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#.gitignore
+src/*
+public/*
+build/static/css/*.map
+build/static/js/*.map
